CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

Version 1.6.0
------------------------------------------------------------------
26 July 2007
+ Changed Forms class to use the lower upload limit: system or
setting.
+ Added upload_limits.txt file.

23 July 2007
+ Default rows and columns for text areas now comes for the form
config file.
+ Javascript
  o Tinymce editor - changed method for determining height and width

+ Updated file: formConfig.php

20 July 2007
+ DBPager - changed 'page' variable to 'pg' to try and prevent
  problems with mod_rewrite
+ Added mp3player and flowplayer credits

19 July 2007
+ Database
  o Small change on increment to prevent "column_name + -1". I don't think
    it matters but I prefer a cleaner approach with "column_name -1"
  o Also, if the increment amount is 0, function returns true.
+ version.php - increased to 1.3.0
+ Dropped config/core from subversion. Was a long time coming. Didn't
  need to have two sets of files.
+ Setup - Now copied the core/conf directory into config/core/
+ Conversion - patched category conversion with Eloi's fix (#1742987)
+ Updated files : conf/version.php

18 July 2007
+ Javascript:Ajax - Hopefully fixed some goofiness with the loadRequester


17 July 2007
+ Database - Fixed some error messages. wrong function named
+ Mail - added single and double quotes to allow characters
+ Key - Added a little code to strip a url from an link if sent by
        mistake



16 July 2007
+ Changed Editor and Form to default to normal text areas if the
  editor is missing.
+ Changed javascript calendar's default form to phpws_form

12 July 2007
+ Database
  o Added setLock, lockTables, and unlockTables functions. Factory
    files updated as well though postgresql is untested.
  o Added fourth parameter to addColumn. Lets you perform single
    column counts
  o The reset function now cleans out the tables array leaving only
    the initial table